[gd_scene load_steps=6 format=2]

[ext_resource path="res://Asset/asset random/sword.png" type="Texture" id=1]
[ext_resource path="res://sword.gd" type="Script" id=2]
[ext_resource path="res://Asset/sound effect/bat_get_hit2.wav" type="AudioStream" id=3]
[ext_resource path="res://Asset/sound effect/slime_squashy_short.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.29626, 10 )

[node name="Area2D" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 0.785398
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.33597, -3.00339 )
scale = Vector2( 1.9, 0.6 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2.50283, -2.83654 )
scale = Vector2( 2.11793, 0.883201 )

[node name="SlimeHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="BatHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
